--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,15 +1,13 @@
 @import "../../styles/variables";
 
 .wrapper {
+  grid-column: 1/-1;
   height: $height-header;
   background-color: $color-white;
   display: flex;
   align-items: center;
   justify-content: center;
   box-shadow: 0 0 5px $color-shadow;
-  position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
 }
 
