--- a/src/components/Sidebar/CountryEl.module.scss
+++ b/src/components/Sidebar/CountryEl.module.scss
@@ -3,9 +3,12 @@
 .wrapper {
   padding: 0.1rem;
   display: flex;
+  transform-origin: left;
+  transition: all 0.3s;
 
   &:hover {
-    transform: scale(1.1);
+    transform: scale(1.05);
+    font-weight: 600;
   }
 }
 
