--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,19 +1,21 @@
 @import "../../styles/variables";
 
 .wrapper {
-  width: 30rem;
   height: 100%;
   padding: 3rem;
-  background-color: $color-white;
-  border-radius: $border-radius;
   height: 100%;
   display: flex;
+  padding: $grid-gap;
+  overflow: auto;
 }
 
 .sidebar {
+  padding: 3rem;
+  background-color: $color-white;
+  border-radius: $border-radius;
   display: flex;
   flex-direction: column;
-  flex-grow: 0;
+  align-items: flex-start;
   width: 100%;
 
   & h2 {
@@ -30,6 +32,7 @@
 }
 
 .list {
+  width: 100%;
   height: 100%;
   overflow: auto;
 }
