--- a/src/components/Header/PopupBtn.module.scss
+++ b/src/components/Header/PopupBtn.module.scss
@@ -21,7 +21,7 @@
 }
 
 .active {
-  &::after {
+  &::before {
     content: "";
     width: 100%;
     height: 100%;
@@ -33,7 +33,7 @@
     z-index: -1;
 
     animation-name: btn;
-    animation-duration: 0.5s;
+    animation-duration: 0.3s;
   }
 }
 
