--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -14,7 +14,7 @@
 .header {
   max-width: $width-main;
   width: 100%;
-  margin: 0 10%;
+  padding: 0 3rem;
   font-size: $font-large;
   display: flex;
   align-items: center;
