--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -11,8 +11,8 @@
 
 .sidebar {
   padding: 3rem;
-  background-color: $color-white;
-  border-radius: $border-radius;
+  border-right: 1px solid $color-grey;
+  border-left: 1px solid $color-grey;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
