--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,7 +10,7 @@ $color-white: rgb(250, 250, 250);
 
 $color-black: rgb(5, 5, 5);
 
-$color-grey-dark: rgb(70, 70, 70);
+$color-grey-dark: rgb(40, 40, 40);
 $color-grey: rgb(128, 128, 128);
 $color-grey-light: rgb(200, 200, 200);
 $color-grey-light-very: rgb(240, 240, 240);
@@ -27,6 +27,7 @@ $color-secondary: rgb(57, 79, 240);
 // height
 $height-header: 7rem;
 $height-header-phone: 8rem;
+$height-footer: 7rem;
 
 // breaks
 $break-phone-tiny: 310px;
