--- a/src/pages/HomePage.module.scss
+++ b/src/pages/HomePage.module.scss
@@ -11,7 +11,10 @@
 
 .content {
   max-width: $width-main;
-  display: flex;
-  height: calc(100vh - $height-header - $height-footer);
+  width: 100%;
+  display: grid;
+  grid-template-columns: 28rem 1fr;
+  grid-template-rows: calc(100vh - $height-header - $height-footer);
+
   margin: auto;
 }
