--- a/src/components/Main/ArticleCard.module.scss
+++ b/src/components/Main/ArticleCard.module.scss
@@ -1,9 +1,31 @@
 @import "../../styles/variables";
+@import "../../styles/mixins";
 
 .wrapper {
   height: 14rem;
   overflow: hidden;
   border-radius: $border-radius;
+  cursor: pointer;
+  position: relative;
+
+  // styling below looks like overkill but is needed for RWD - ios does not render radius on outlines
+  &::before {
+    transition: all 0.3s;
+    content: "";
+    position: absolute;
+    // background-color: salmon;
+    width: 100%;
+    height: 100%;
+    border-radius: $border-radius;
+    border: 2px solid $color-grey-light;
+    opacity: 0;
+  }
+
+  &:hover {
+    &::before {
+      opacity: 1;
+    }
+  }
 }
 
 .card {
@@ -49,7 +71,23 @@
   grid-template-rows: auto 1fr auto;
   align-items: start;
 
+  .source {
+    overflow: hidden;
+
+    & h3 {
+      font-size: $font-small;
+      color: $color-base;
+      font-weight: 500;
+      margin-bottom: 0.5rem;
+
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
+  }
+
   & h2 {
+    @include serif-font;
     font-size: $font-small;
     font-weight: 700;
 
@@ -59,25 +97,38 @@
     line-clamp: 5;
     -webkit-box-orient: vertical;
   }
-  & h3 {
-    font-size: $font-small;
-    color: $color-base;
-    font-weight: 500;
-    margin-bottom: 0.5rem;
-
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-  }
-
-  & span {
-  }
 }
 
 .list {
-  height: 8rem;
+  height: 4.5rem;
 
-  & figure {
-    display: none;
+  & .card {
+    grid-template-columns: 1fr;
+    overflow: hidden;
+    align-items: center;
+
+    & .textbox {
+      grid-template-columns: 1fr 2fr 1fr;
+      align-items: center;
+
+      & h2 {
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 2; /* number of lines to show */
+        line-clamp: 2;
+        -webkit-box-orient: vertical;
+      }
+
+      & h3 {
+        font-size: $font-small;
+        color: $color-base;
+        font-weight: 500;
+        margin-bottom: 0.5rem;
+      }
+
+      & span {
+        justify-self: end;
+      }
+    }
   }
 }
