--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -6,7 +6,7 @@
 }
 
 .main {
-  padding: $grid-gap $grid-gap 0 0;
+  padding: $grid-gap $grid-gap $grid-gap 0;
   height: 100%;
   width: 100%;
   overflow: auto;
@@ -18,4 +18,5 @@
 
 .list {
   grid-template-columns: 1fr;
+  gap: $grid-gap-small;
 }
