--- a/src/components/Main/ArticleCard.module.scss
+++ b/src/components/Main/ArticleCard.module.scss
@@ -8,24 +8,26 @@
   cursor: pointer;
   position: relative;
 
-  // styling below looks like overkill but is needed for RWD - ios does not render radius on outlines
-  &::before {
-    transition: all 0.3s;
-    content: "";
-    position: absolute;
-    // background-color: salmon;
-    width: 100%;
-    height: 100%;
-    border-radius: $border-radius;
-    border: 2px solid $color-grey-light;
-    opacity: 0;
-  }
-
-  &:hover {
+  & a {
     &::before {
-      opacity: 1;
+      transition: all 0.3s;
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      border-radius: $border-radius;
+      border: 2px solid $color-grey-light;
+      opacity: 0;
+    }
+
+    &:hover {
+      &::before {
+        opacity: 1;
+      }
     }
   }
+
+  // styling below looks like overkill but is needed for RWD - ios does not render radius on outlines
 }
 
 .card {
