--- a/src/components/UI/Modal.module.scss
+++ b/src/components/UI/Modal.module.scss
@@ -1,5 +1,16 @@
 @import "../../styles/variables";
 
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: $color-shadow;
+  z-index: 2;
+  backdrop-filter: blur(5px);
+}
+
 .wrapper {
   z-index: 3;
   position: fixed;
