add number of articles in footer

--- a/src/pages/HomePage.module.scss
+++ b/src/pages/HomePage.module.scss
@@ -1,19 +1,10 @@
 @import "../styles/variables";
 
-// .wrapper {
-//   display: grid;
-//   grid-template-columns: 30rem 1fr;
-//   grid-template-rows:
-//     $height-header calc(100vh - $height-header - $height-footer)
-//     $height-footer;
-//   z-index: 2;
-// }
-
 .content {
   max-width: $width-main;
   width: 100%;
   display: grid;
-  grid-template-columns: 28rem 1fr;
+  grid-template-columns: $width-sidebar 1fr;
   grid-template-rows: calc(100vh - $height-header - $height-footer);
 
   margin: auto;
