--- a/src/components/Main/SearchArticles.module.scss
+++ b/src/components/Main/SearchArticles.module.scss
@@ -2,17 +2,22 @@
 
 .wrapper {
   margin: 5rem auto;
+  width: 100%;
 }
 
 .form {
+  margin: 0 auto;
   display: flex;
   gap: 2rem;
   flex-direction: column;
   align-items: center;
+  width: 70%;
 
   & input {
-    width: 30rem;
+    width: 100%;
   }
+
+  align-self: flex-end;
 }
 
 .label {
