--- a/src/components/Footer/Results.module.scss
+++ b/src/components/Footer/Results.module.scss
@@ -23,8 +23,8 @@
 .total {
   // color: $color-base;
   background-color: $color-base;
-  width: 3.5rem;
-  height: 3.5rem;
+  min-width: 4rem;
+  height: 4rem;
   border-radius: 10rem;
   color: $color-white;
 
