--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,22 +1,35 @@
 @import "../../styles/variables";
 
 .wrapper {
-  flex-grow: 1;
+  height: 100%;
   width: 100%;
 }
 
 .main {
   padding: $grid-gap $grid-gap $grid-gap 0;
-  max-height: 100%;
+  height: 100%;
   width: 100%;
   overflow: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+}
 
+.list {
   display: grid;
+  grid-template-columns: 1fr;
+  gap: $grid-gap-small;
+}
+
+.grid {
   grid-template-columns: 1fr 1fr 1fr;
   gap: $grid-gap;
 }
 
-.list {
-  grid-template-columns: 1fr;
-  gap: $grid-gap-small;
+.pagination-wrapper {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  padding-top: 1rem;
 }
