--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@
 html {
   font-size: 62.5%;
 
-  @media only screen and (max-width: $break-phone) {
+  @media only screen and (max-width: $break-tablet) {
     font-size: 50%;
   }
 
