--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -13,6 +13,10 @@
   display: flex;
   flex-direction: column;
   justify-content: stretch;
+
+  @media (max-width: $break-phone) {
+    padding: $grid-gap;
+  }
 }
 
 .list {
@@ -24,6 +28,10 @@
 .grid {
   grid-template-columns: 1fr 1fr 1fr;
   gap: $grid-gap;
+
+  @media (max-width: $break-phone) {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 .pagination-wrapper {
