--- a/src/components/Header/ViewSwitch.module.scss
+++ b/src/components/Header/ViewSwitch.module.scss
@@ -13,6 +13,11 @@
     cursor: pointer;
     color: $color-grey-light;
 
+    @media (max-width: $break-phone) {
+      flex-direction: column;
+      gap: 0;
+    }
+
     & span {
       font-size: $font-medium;
 
@@ -21,12 +26,12 @@
       }
     }
 
-    // & svg {
-    //   @media (max-width: $break-phone) {
-    //     height: 3rem;
-    //     width: 3rem;
-    //   }
-    // }
+    & svg {
+      @media (max-width: $break-phone) {
+        height: 3rem;
+        width: 3rem;
+      }
+    }
   }
 }
 
