style article details modal window

--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,8 +1,17 @@
 @import "../../styles/variables";
+@import "../../styles/animations";
 
 .wrapper {
   height: 100%;
   width: 100%;
+
+  @media (max-width: $break-phone) {
+    min-height: calc(100vh - $height-footer - $height-header);
+  }
+
+  .hiding {
+    animation: hide 1s;
+  }
 }
 
 .main {
@@ -16,6 +25,7 @@
 
   @media (max-width: $break-phone) {
     padding: $grid-gap;
+    overflow: visible;
   }
 }
 
