--- a/src/components/Popup/Popup.module.scss
+++ b/src/components/Popup/Popup.module.scss
@@ -1,6 +1,7 @@
 @import "../../styles/variables";
 
-.conent {
+.content {
+  padding: 2rem 5rem;
   & h1 {
     margin-bottom: 2rem;
     font-size: $font-large;
