--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -6,10 +6,12 @@
   padding: $grid-gap;
 
   @media (max-width: $break-phone) {
-    position: absolute;
-    z-index: 1;
+    position: fixed;
+    top: 0;
+
+    z-index: 4;
     background-color: $color-white;
-    height: 70vh;
+    height: 80vh;
     width: 70vw;
     max-width: 80vw;
     border-radius: 0 0 $border-radius 0;
@@ -38,6 +40,7 @@
   }
 
   @media (max-width: $break-phone) {
+    padding-top: 5rem;
     border: none;
   }
 }
@@ -53,29 +56,18 @@
   overflow-x: hidden;
 }
 
+.lang-switch {
+  position: absolute;
+  right: 3rem;
+  top: 6rem;
+
+  @media (min-width: $break-phone) {
+    display: none;
+  }
+}
+
 .overlay {
   @media (min-width: $break-phone) {
     display: none;
   }
-
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background-color: $color-shadow;
-  left: 0;
-  top: 0;
-  z-index: 1;
-  backdrop-filter: blur(5px);
-  transition: all 0.5s;
-
-  &.hidden {
-    visibility: hidden;
-    opacity: 0;
-  }
-}
-
-.lang-switch {
-  position: absolute;
-  right: 2rem;
-  top: 2rem;
 }
