add header tests

--- a/src/components/Footer/Clock.module.scss
+++ b/src/components/Footer/Clock.module.scss
@@ -8,6 +8,7 @@
   gap: 0.5rem;
 
   & svg {
+    height: $font-large-very;
     color: $color-base;
     margin-right: 1rem;
     font-size: $font-large;
