--- a/src/components/Main/SearchArticles.module.scss
+++ b/src/components/Main/SearchArticles.module.scss
@@ -3,6 +3,7 @@
 .wrapper {
   margin: auto;
   width: 100%;
+  height: 100%;
 
   @media (max-width: $break-phone) {
     min-height: calc(100vh - $height-footer - $height-header);
