--- a/src/components/Main/ArticleModal.module.scss
+++ b/src/components/Main/ArticleModal.module.scss
@@ -14,6 +14,7 @@
 .head {
   display: flex;
   justify-content: space-between;
+  gap: 2rem;
 
   @media (max-width: $break-phone) {
     flex-direction: column-reverse;
@@ -35,13 +36,13 @@
   }
 
   & figure {
-    max-width: 40%;
-    max-height: 25vh;
+    width: 30rem;
+    height: 20rem;
     border-radius: $border-radius-small;
     overflow: hidden;
 
     & img {
-      object-fit: contain;
+      object-fit: cover;
       width: 100%;
       height: 100%;
     }
