--- a/src/components/UI/Overlay.module.scss
+++ b/src/components/UI/Overlay.module.scss
@@ -12,10 +12,19 @@
   backdrop-filter: blur(5px);
 }
 
-.showing {
-  animation: show 0.4s;
-}
-
-.hiding {
-  animation: hide 0.4s;
+.fade {
+  &-enter {
+    opacity: 0;
+  }
+  &-enter-active {
+    opacity: 1;
+    transition: all 0.3s;
+  }
+  &-exit {
+    opacity: 1;
+  }
+  &-exit-active {
+    opacity: 0;
+    transition: all 0.3s;
+  }
 }
