--- a/src/components/Main/ArticleModal.module.scss
+++ b/src/components/Main/ArticleModal.module.scss
@@ -5,6 +5,8 @@
   padding: 3rem 4rem 0 4rem;
   display: flex;
   flex-direction: column;
+  max-height: 80vh;
+  overflow: auto;
 
   @media (max-width: $break-phone) {
     padding: 0;
@@ -45,11 +47,15 @@
       object-fit: cover;
       width: 100%;
       height: 100%;
+
+      @media (max-width: $break-phone) {
+        max-height: 30rem;
+      }
     }
 
     @media (max-width: $break-phone) {
       width: 100%;
-      max-width: 100%;
+      height: auto;
       border-radius: 0;
     }
   }
