--- a/src/components/Main/ArticleModal.module.scss
+++ b/src/components/Main/ArticleModal.module.scss
@@ -39,9 +39,11 @@
 
   & figure {
     width: 30rem;
+    max-width: 50%;
     height: 20rem;
     border-radius: $border-radius-small;
     overflow: hidden;
+    flex-shrink: 0;
 
     & img {
       object-fit: cover;
@@ -55,8 +57,9 @@
 
     @media (max-width: $break-phone) {
       width: 100%;
+      max-width: 100%;
       height: auto;
-      border-radius: 0;
+      border-radius: $border-radius-small $border-radius-small 0 0;
     }
   }
 }
