--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -14,10 +14,10 @@
     opacity: 100%;
     transform: translate(-50%, calc(-50%));
   }
-  50% {
-    opacity: 50%;
-    transform: translate(-50%, calc(-50% + 5rem)) scale(1);
-  }
+  // 50% {
+  //   opacity: 50%;
+  //   transform: translate(-50%, calc(-50% + 5rem)) scale(1);
+  // }
   100% {
     opacity: 0%;
     transform: translate(-50%, calc(-50% - 20rem)) scale(0.8);
