--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -5,6 +5,10 @@
   background-color: $color-white;
   padding: 1rem 10%;
   height: $height-footer;
+
+  @media (max-width: $break-phone) {
+    padding: 0 1rem;
+  }
 }
 
 .footer {
