--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -51,3 +51,9 @@
   align-items: flex-end;
   padding-top: 1rem;
 }
+
+.error {
+  text-align: center;
+  margin-top: 5rem;
+  font-size: $font-large;
+}
