--- a/src/components/UI/TextAndIcon.module.scss
+++ b/src/components/UI/TextAndIcon.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/variables";
+@import "../../styles/animations";
 
 .wrapper {
   display: flex;
@@ -41,4 +42,56 @@
 
 .faded {
   color: $color-grey-light;
+}
+
+.bump {
+  animation: bump;
+}
+@import "../../styles/variables";
+
+.wrapper {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  font-size: $font-medium;
+  gap: 1rem;
+
+  & span {
+    @media (max-width: $break-phone) {
+      display: none;
+    }
+  }
+
+  // get all children
+  & > * {
+    gap: 1rem;
+    display: flex;
+    align-items: center;
+
+    & span {
+      @media (max-width: $break-phone) {
+        display: none;
+      }
+    }
+  }
+
+  & span {
+    font-size: $font-medium;
+  }
+
+  & svg {
+    height: 3rem;
+
+    @media (max-width: $break-phone) {
+      margin-top: 0.2rem;
+    }
+  }
+}
+
+.faded {
+  color: $color-grey-light;
+}
+
+.bump {
+  animation: bump 200ms;
 }
