--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -1,4 +1,4 @@
-@keyframes show {
+@keyframes slide-in {
   0% {
     opacity: 0%;
     transform: translate(-50%, calc(-50% - 20rem)) scale(0.8);
@@ -9,7 +9,7 @@
   }
 }
 
-@keyframes hide {
+@keyframes slide-out {
   0% {
     opacity: 100%;
     transform: translate(-50%, calc(-50%));
@@ -17,5 +17,17 @@
   100% {
     opacity: 0%;
     transform: translate(-50%, calc(-50% - 20rem)) scale(0.8);
+  }
+}
+
+@keyframes bump {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
   }
 }
