fix header on phone

--- a/src/pages/HomePage.module.scss
+++ b/src/pages/HomePage.module.scss
@@ -12,5 +12,6 @@
   @media (max-width: $break-phone) {
     grid-template-rows: auto;
     grid-template-columns: 1fr;
+    padding-top: $height-header;
   }
 }
